--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,9 @@
 import About from '../components/Aboutsection.astro';
 import Features from '../components/Features.astro';
 import Hero from '../components/Hero.astro';
-import Testimonials from '../components/Testimonials.astro';
+import Testimonials from '../components/Testimonials.astro';// Commented out
 import Layout from '../layouts/Layout.astro';
-import Pricing from '../components/Pricingsection.astro';
+import Pricing from '../components/Pricingsection.astro';// Commented out
 import Faq from '../components/Faq.astro';
 import Clients from '../components/Clients.astro';
 import Team from '../components/Team.astro';
@@ -14,18 +14,18 @@ import Blogsection from '../components/Blogsection.astro';
 ---
 
 <Layout
-  description="Play Astro is a free and open-source Astro template, built for startups, SaaS companies, apps, businesses, and more."
-  title="Free Astro Template and Starter for SaaS, Startup, and App Sites | Play Astro"
+  description="SmartIView offers cutting-edge IoT solutions designed to revolutionize industries. Our flagship product, Agricam, leverages advanced AI technology to provide real-time monitoring, early illness detection, and data analytics, empowering farmers to ensure the well-being of their livestock and significantly reduce mortality rates."
+  title="SmartIView | Innovative IoT Solutions"
 >
   <Hero />
   <Features />
   <About />
   <CTA />
-  <Pricing />
-  <Testimonials />
+<!-- <Pricing /> --> <!-- Commented out -->
+<!-- <Testimonials /> --> <!-- Commented out -->
   <Faq />
-  <Team />
+  <!-- <Team /> --> <!-- Commented out -->
   <Blogsection />
   <Contact />
-  <Clients />
+   <!-- <Clients /> --> <!-- Commented out -->
 </Layout>
