--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -10,19 +10,15 @@
           <div class="mb-12 max-w-[540px] lg:mb-0">
             <h2
               class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]">
-              Brilliant Toolkit to Build Nextgen Website Faster.
+              Who We Are
             </h2>
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-              The main ‘thrust' is to focus on educating attendees on how to best protect highly vulnerable business
-              applications with
-              interactive panel discussions and roundtables led by subject matter experts.
+              At SmartIView, we are dedicated to building intelligent IoT solutions that bridge the gap between technology and real-world problems. 
               <br> <br>
-              The main ‘thrust' is to focus on educating attendees on how to best protect highly vulnerable business
-              applications with
-              interactive panel.
+              Our focus is on developing innovative, data-driven systems that empower industries to operate smarter, faster and more efficiently.
             </p>
 
-            <a href="javascript:void(0)"
+            <a href="/aboutt"
               class="inline-flex items-center justify-center py-3 text-base font-medium text-center text-white border border-primary rounded-md px-7 bg-primary hover:bg-blue-dark hover:border-blue-dark">
               Know More
             </a>
@@ -48,7 +44,7 @@
                 class="bg-primary relative z-10 mb-4 flex items-center justify-center overflow-hidden py-12 px-6 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8">
                 <div>
                   <span class="block text-5xl font-extrabold text-white">
-                    09
+                    05
                   </span>
                   <span class="block text-base font-semibold text-white">
                     We have
