--- a/src/components/CTAsection.astro
+++ b/src/components/CTAsection.astro
@@ -1,21 +1,21 @@
 <!-- ====== CTA Section Start -->
-<section class="relative z-10 overflow-hidden bg-primary py-20 lg:py-[115px]">
-  <div class="container mx-auto">
+<section class="relative z-10 overflow-hidden py-20 lg:py-[100px]"
+  style="background-image: url('/assets/hero/farmiot12.avif'); background-size: cover; background-position: center;"
+  >
     <div class="relative overflow-hidden">
       <div class="flex flex-wrap items-stretch -mx-4">
         <div class="w-full px-4">
           <div class="mx-auto max-w-[570px] text-center">
             <h2 class="mb-2.5 text-3xl font-bold md:leading-[1.44] text-white md:text-[38px]">
-              <span>What Are You Looking For?</span>
-              <span class="font-normal text-3xl md:text-[40px]"> Get Started Now </span>
+              <span>Ready to Transform Your Industry?</span>
+              <span class="font-normal text-3xl md:text-[40px]"> </span>
             </h2>
             <p class="mb-6 mx-auto max-w-[515px] text-base leading-[1.5] text-white">
-              There are many variations of passages of Lorem Ipsum but the
-              majority have suffered in some form.
+             
             </p>
-            <a href="javascript:void(0)"
+            <a href="/solutions"
               class="inline-block py-3 text-base font-medium text-white transition border border-transparent rounded-md bg-secondary px-7 hover:bg-[#0BB489]">
-              Start using Play
+              Contact Us
             </a>
           </div>
         </div>
