--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -27,7 +27,7 @@
               <div>
                 <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">Our Location</h5>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  401 Broadway, 24th Floor, Orchard Cloud View, London
+                  50 Idoro road, Uyo, Akwa Ibom
                 </p>
               </div>
             </div>
@@ -40,9 +40,9 @@
               </div>
               <div>
                 <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">How Can We Help?</h5>
-                <p class="text-base text-body-color dark:text-dark-6">info@yourdomain.com</p>
+                <p class="text-base text-body-color dark:text-dark-6">info@SmartIView.com.ng</p>
                 <p class="text-base text-body-color dark:text-dark-6 mt-1">
-                  contact@yourdomain.com
+                  contact@SmartIView.com.ng
                 </p>
               </div>
             </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="mb-[22px]">
               <label for="phone" class="block text-sm text-body-color dark:text-dark-6 mb-4">Phone*</label>
-              <input type="text" name="phone" placeholder="+885 1254 5211 552"
+              <input type="text" name="phone" placeholder="+234 0000 000 0000"
                 class="bg-transparent w-full text-body-color dark:text-dark-6 placeholder:text-body-color/60 border-0 border-b border-[#f1f1f1] dark:border-dark-3 pb-3 focus:border-primary focus:outline-none" />
             </div>
             <div class="mb-[30px]">
