--- a/src/components/Blogsection.astro
+++ b/src/components/Blogsection.astro
@@ -11,7 +11,8 @@ publishedBlogEntries.sort(function (a, b) {
   return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
 });
 ---
-
+<!-- Commenting out the blog section -->
+<!--
 <section class="pt-20 pb-10 lg:pt-[120px] lg:pb-20 bg-white dark:bg-dark">
   <div class="container">
     <div class="flex flex-wrap justify-center -mx-4">
