--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -2,27 +2,19 @@
 const faqs = [
   {
     title: "What is SmartIView?",
-    description: "SmartIView is an innovative IoT solution designed to revolutionize industries with intelligent IoT solutions that solve real-world problems efficiently and sustainably.",
+    description: "SmartIView is an early-stage tech startup working on practical tools built with IoT, embedded systems, and cloud technologies. The focus is on building useful systems that solve real problems.",
   },
   {
-    title: "How does Agricam help farmers?",
-    description: "Agricam helps farmers by providing real-time monitoring of livestock behavior, early detection of illnesses, instant alerts, and data analytics for better decision-making. This helps in significantly reducing mortality rates and improving livestock health.",
+    title: "Are you currently working on any specific product?",
+    description: "We are in early development phase, exploring and validating ideas that align with our mission. While we're not disclosing specific projects just yet, each initiative we take on is rooted in research, feedback, and a focused impact.",
   },
   {
-    title: "What are the key features of Agricam?",
-    description: "Agricam offers features such as real-time monitoring, early illness detection, instant alerts to farmers, and comprehensive data analytics. These features empower farmers to ensure the well-being of their livestock.",
+    title: "Can I work with SmartIView?",
+    description: "If you're doing something interesting and think we can build something better together, you can reach out.",
   },
   {
-    title: "How can I get started with SmartIView?",
-    description: "Getting started with SmartIView is easy. Simply contact our sales team through our website, and they will guide you through the process of integrating Agricam into your livestock management system.",
-  },
-  {
-    title: "Is there a subscription fee for using Agricam?",
-    description: "Yes, Agricam operates on a subscription-based model. We offer various pricing plans to suit different farm sizes and needs. Contact our sales team for more information on pricing and plans.",
-  },
-  {
-    title: "What kind of support does SmartIView offer?",
-    description: "SmartIView offers comprehensive support to all our customers. Our support team is available 24/7 to assist with any issues or questions you may have. We also provide detailed documentation and training resources.",
+    title: "How do I stay updated?",
+    description: "This site is the best place to for now. Once there is something worth sharing, we'll post it here.",
   },
 ]
 ---
@@ -36,10 +28,10 @@ const faqs = [
       <div class="w-full px-4">
         <div class="mx-auto mb-[60px] max-w-[520px] text-center">
           <span class="block mb-2 text-lg font-semibold text-primary">
-            FAQ
+            
           </span>
           <h2 class="text-dark dark:text-white mb-3 text-3xl leading-[1.2] font-bold sm:text-4xl md:text-[40px]">
-            Any Questions? Look Here
+          Frequently Asked Questions
           </h2>
           <p class="mx-auto max-w-[485px] text-base text-body-color dark:text-dark-6">
             
