--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+// Import the Footer component
 import Footer from '../components/layout/Footer.astro';
 import Header from '../components/layout/Header.astro';
 import BackToTop from '../components/layout/BackToTop.astro';
@@ -34,9 +35,10 @@ const { description, title, image } = Astro.props;
     <main>
       <slot />
     </main>
-    <Footer />
+    <Footer /> <!-- Footer added here -->
     <BackToTop />
-    <MadeWithButton />
+     <!-- Comment out the MadeWithButton component -->
+    <!--<MadeWithButton /> -->
     <style is:global>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
       body {
