--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import Team from '../components/Team.astro';
 import Contact from '../components/Contactsection.astro';
 import CTA from '../components/CTAsection.astro';
 import Blogsection from '../components/Blogsection.astro';
+import Visio from '../components/Visio.astro';
 ---
 
 <Layout
@@ -23,8 +24,9 @@ import Blogsection from '../components/Blogsection.astro';
   <CTA />
 <!-- <Pricing /> --> <!-- Commented out -->
 <!-- <Testimonials /> --> <!-- Commented out -->
+  <Visio />
+  <Team />
   <Faq />
-  <!-- <Team /> --> <!-- Commented out -->
   <Blogsection />
   <Contact />
    <!-- <Clients /> --> <!-- Commented out -->
