--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -11,7 +11,8 @@
               CONTACT US
             </span>
             <h2 class="max-w-[260px] text-[35px] leading-[1.14] font-semibold text-dark dark:text-white">
-              Let's talk about your problem.
+            Let's talk.
+
             </h2>
           </div>
           <div class="mb-12 flex flex-wrap justify-between lg:mb-0">
@@ -27,7 +28,7 @@
               <div>
                 <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">Our Location</h5>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  50 Idoro road, Uyo, Akwa Ibom
+                  50 Idoro road, Uyo, Akwa Ibom.
                 </p>
               </div>
             </div>
@@ -40,9 +41,8 @@
               </div>
               <div>
                 <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">How Can We Help?</h5>
-                <p class="text-base text-body-color dark:text-dark-6">info@SmartIView.com.ng</p>
-                <p class="text-base text-body-color dark:text-dark-6 mt-1">
-                  contact@SmartIView.com.ng
+                <p class="text-base text-body-color dark:text-dark-6">victor@smartiview.com.ng</p>
+                
                 </p>
               </div>
             </div>
