--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 <!-- ====== Hero Section Start -->
 <section
-  id="home"
+  id="visio"
   class="relative overflow-hidden pt-[120px] md:pt-[130px] lg:pt-[160px]"
   style= "background-image: url('/assets/hero/iot 22.jpg'); background-size: cover; background-position: center;"
   >
@@ -14,25 +14,25 @@
           <h1
             class="mb-6 text-3xl font-bold leading-snug text-white sm:text-4xl sm:leading-snug lg:text-5xl lg:leading-[1.2]"
           >
-          Smart Solutions for a Smarter Future
+          Saving Africa’s Livestock, One Smart Sensor at a Time.
             </h1>
           <p
             class="mx-auto mb-9 max-w-[600px] font-medium text-base text-white sm:text-lg sm:leading-[1.44]"
           >
-Empowering industries with intelligent IoT solutions for smarter, connected systems that solve real-world problems efficiently and sustainably.
+          Millions of farmers lose animals every year due to undetected illnesses. At SmartIView, we’re building a smarter way — affordable tools that help farmers monitor livestock health early, act faster, and reduce losses.
           </p>
           <ul class="mb-10 flex gap-5 flex-wrap items-center justify-center">
             <li>
               <a
-                href="https://github.com/TailGrids/play-astro/archive/refs/heads/main.zip"
+                href="/#Visio"
                 class="inline-flex items-center justify-center rounded-md bg-white py-[14px] px-7 text-center text-base font-medium text-dark shadow-1 transition duration-300 ease-in-out hover:text-body-color hover:bg-gray-2"
               >
-                Learn More
+                Discover Our Vision
               </a>
             </li>
             <li>
               <a
-                href=
+                href="/#Visio"
               
             
               >
