--- a/src/components/Team.astro
+++ b/src/components/Team.astro
@@ -1,9 +1,6 @@
 ---
 const teams = [
-  {name: "Matheus Ferrero", description: "Marketing Expert", image: "/assets/team/team-01.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Stuard Ferrel", description: "Digital Marketer", image: "/assets/team/team-02.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Eva Hudson", description: "Creative Designer", image: "/assets/team/team-03.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
-  {name: "Jackie Sanders", description: "SEO Expert", image: "/assets/team/team-04.png", facebookLink: "#", twitterLink: "#", instagramLink: "#",},
+  {name: "Victor Isuo", description: "Founder", image: "/assets/team/team-01.jpg", facebookLink: "#", twitterLink: "#", instagramLink: "#",}, 
 ]
 ---
 
@@ -14,14 +11,17 @@ const teams = [
       <div class="w-full px-4">
         <div class="mx-auto mb-[60px] max-w-[485px] text-center">
           <span class="text-primary mb-2 block text-lg font-semibold">
-            Our Team Members
+            
           </span>
           <h2 class="mb-3 text-3xl leading-[1.2] font-bold text-dark dark:text-white sm:text-4xl md:text-[40px]">
-            Our Creative Team
+            Meet the Founder
           </h2>
           <p class="text-body-color dark:text-dark-6 text-base">
-            There are many variations of passages of Lorem Ipsum available
-            but the majority have suffered alteration in some form.
+            Every big vision starts with a single step - and a single builder. SmartIView began with one founder determined to shape a smarter, more responsive world through technology.
+              <br> <br> 
+              <p class="text-body-color dark:text-dark-6 text-base">
+              Today, it's one mind at work. Tomorrow, it will be a team. The mission is already in motion.
+              </span>
           </p>
         </div>
       </div>
