--- a/src/components/Visio.astro
+++ b/src/components/Visio.astro
@@ -1,6 +1,5 @@
-<!-- ====== About Section Start -->
 <section
-  id="about"
+  id="Visio"
   class="bg-gray-1 dark:bg-dark-2 pt-20 pb-8 lg:pt-[120px] lg:pb-[70px]"
 >
   <div class="container">
@@ -10,18 +9,19 @@
           <div class="mb-12 max-w-[540px] lg:mb-0">
             <h2
               class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]">
-              What Drives Us
+              Our Vision
             </h2>
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-              Across Africa, livestock farmers face enormous challenges — from undetected illnesses to preventable deaths. But most of them don’t have access to vet care or early warning tools.
-We believe tech should change that.
-SmartIView is building intelligent systems that track livestock health in real time — so farmers can act faster, save more animals, and build stronger incomes.
+              To become a leading force in purposeful innovation - creating scalable, smart systems that enhances how people live, learn, and operate, across sectors.
               <br> <br>
-              This isn’t about flashy tech. It’s about giving farmers the tools they actually need.
+             
             </p>
-
+            <h2
+            class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]">
+            Our Mission
+          </h2>
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-              
+              To design and deploy adaptable IoT solutions that tackle real problems in health, education, agriculture, and beyond - starting right where they're needed most.
           </div>
         </div>
 
@@ -29,14 +29,14 @@ SmartIView is building intelligent systems that track livestock health in real t
           <div class="flex flex-wrap -mx-2 sm:-mx-4 lg:-mx-2 xl:-mx-4">
             <div class="w-full px-2 sm:w-1/2 sm:px-4 lg:px-2 xl:px-4">
               <div class="mb-4 sm:mb-8 sm:h-[400px] md:h-[540px] lg:h-[400px] xl:h-[500px]">
-                <img src="/assets/about/about-image-01.jpg" alt="about image"
+                <img src="/assets/about/about-image-05.jpg" alt="about image"
                   class="object-cover object-center w-full h-full" />
               </div>
             </div>
 
             <div class="w-full px-2 sm:w-1/2 sm:px-4 lg:px-2 xl:px-4">
               <div class="mb-4 sm:mb-8 sm:h-[220px] md:h-[346px] lg:mb-4 lg:h-[225px] xl:mb-8 xl:h-[310px]">
-                <img src="/assets/about/about-image-02.jpg" alt="about image"
+                <img src="/assets/about/about-image-06.jpg" alt="about image"
                   class="object-cover object-center w-full h-full" />
               </div>
 
@@ -44,14 +44,13 @@ SmartIView is building intelligent systems that track livestock health in real t
                 class="bg-primary relative z-10 mb-4 flex items-center justify-center overflow-hidden py-12 px-6 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8">
                 <div>
                   <span class="block text-5xl font-extrabold text-white">
-                    SmartIView
+                    We are
                   </span>
-                  <br> <br>
                   <span class="block text-base font-semibold text-white">
-                    From insight to invention
+                     Future Shaping
                   </span>
                   <span class="block text-base font-medium text-white text-opacity-70">
-                   
+                    
                   </span>
                 </div>
                 <div>
