--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -17,21 +17,21 @@ const footerLinks = [
     links: [
       {
         name: 'Home',
-        href: '/',
-        isExternal: false,
-      },
-      {
-        name: 'Features',
-        href: '/',
+        href: '/#home',
         isExternal: false,
       },
       {
         name: 'About',
-        href: '/',
+        href: '/#about',
         isExternal: false,
       },
       {
-        name: 'Testimonial',
+        name: 'Contact',
+        href: '/#contact',
+        isExternal: false,
+      },
+      {
+        name: '',
         href: '/',
         isExternal: false,
       },
@@ -40,11 +40,6 @@ const footerLinks = [
   {
     header: 'Features',
     links: [
-      {
-        name: 'How it works',
-        href: '/',
-        isExternal: false,
-      },
       {
         name: 'Privacy policy',
         href: '/',
@@ -66,29 +61,14 @@ const footerLinks = [
     header: 'Our Products',
     links: [
       {
-        name: 'Lineicons',
-        href: 'https://lineicons.com/',
-        isExternal: true,
-      },
-      {
-        name: 'TailAdmin',
-        href: 'https://tailadmin.com/',
-        isExternal: true,
-      },
-      {
-        name: 'TailGrids',
-        href: 'https://tailgrids.com/',
-        isExternal: true,
-      },
-      {
-        name: 'UIdeck',
-        href: 'https://uideck.com/',
+        name: 'Coming Soon...',
+        href: '',
         isExternal: true,
       },
     ],
   },
   {
-    header: 'Latest blog',
+    header: '',
     links: [],
   },
 ];
@@ -108,14 +88,13 @@ const footerLinks = [
             class="mb-6 inline-block max-w-[160px]"
           >
             <img
-              src="/assets/logo/logo-white.svg"
+              src="/assets/logo/logo-white.png"
               alt="logo"
               class="max-w-full"
             />
           </a>
           <p class="mb-8 max-w-[270px] text-base text-gray-7">
-            We create digital experiences for brands and companies by using
-            technology.
+            Building smart solutions for a smarter world.
           </p>
           <div class="-mx-3 flex items-center">
             <a href="javascript:void(0)" class="px-3 text-gray-7 hover:text-white">
@@ -199,6 +178,32 @@ const footerLinks = [
           </ul>
         </div>
       </div>
+      <!--
+<div class="w-full px-4 md:w-2/3 lg:w-6/12 xl:w-3/12">
+  <div class="mb-10 w-full">
+    <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[3].header}</h4>
+    <ul class="flex flex-col gap-8">
+      {
+        publishedBlogEntries.slice(0, 2).map((blogPostEntry, index) => (
+          <li>
+            <a class="group flex items-center gap-[22px]" href={`/blog/${blogPostEntry.slug}`}>
+              <div class="overflow-hidden rounded max-w-[70px] w-full max-h-12 h-full">
+                <img
+                  src={blogPostEntry.data.image.src}
+                  alt={blogPostEntry.data.image.alt}
+                />
+              </div>
+              <span class="max-w-[180px] text-gray-7 text-base group-hover:text-white">
+                {blogPostEntry.data.title.slice(0, 35)} ...
+              </span>
+            </a>
+          </li>
+        ))
+      }
+    </ul>
+  </div>
+</div>
+-->
       <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-3/12 xl:w-2/12">
         <div class="mb-10 w-full">
           <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[2].header}</h4>
@@ -222,33 +227,7 @@ const footerLinks = [
           </ul>
         </div>
       </div>
-      <div class="w-full px-4 md:w-2/3 lg:w-6/12 xl:w-3/12">
-        <div class="mb-10 w-full">
-          <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[3].header}</h4>
-          <ul class="flex flex-col gap-8">
-            {
-              publishedBlogEntries.slice(0, 2).map((blogPostEntry, index) => (
-                <li>
-                  <a class="group flex items-center gap-[22px]" href={`/blog/${blogPostEntry.slug}`}>
-                    <div class="overflow-hidden rounded max-w-[70px] w-full max-h-12 h-full">
-                      <img
-                        src={blogPostEntry.data.image.src}
-                        alt={blogPostEntry.data.image.alt}
-                      />
-                    </div>
-                    <span class="max-w-[180px] text-gray-7 text-base group-hover:text-white">
-                      {blogPostEntry.data.title.slice(0, 35)} ...
-                    </span>
-                  </a>
-                </li>
-              ))
-            }
-          </ul>
-        </div>
-      </div>
     </div>
-  </div>
-
   <div class="mt-12 border-t border-[#8890A4] border-opacity-40 py-8 lg:mt-[60px]">
     <div class="container">
       <div class="-mx-4 flex flex-wrap">
@@ -261,19 +240,19 @@ const footerLinks = [
                 href="javascript:void(0)"
                 class="px-3 text-base text-gray-7 hover:text-white hover:underline"
               >
-                Privacy policy
+              © 2025 SmartIView. All rights reserved.
               </a>
               <a
                 href="javascript:void(0)"
                 class="px-3 text-base text-gray-7 hover:text-white hover:underline"
               >
-                Legal notice
+                
               </a>
               <a
                 href="javascript:void(0)"
                 class="px-3 text-base text-gray-7 hover:text-white hover:underline"
               >
-                Terms of service
+                
               </a>
             </div>
           </div>
@@ -281,14 +260,14 @@ const footerLinks = [
         <div class="w-full px-4 md:w-1/3 lg:w-1/2">
           <div class="my-1 flex justify-center md:justify-end">
             <p class="text-base text-gray-7">
-              Designed and Developed by
+              
               <a
-                href="https://tailgrids.com"
+                href="javascript:void(0)"
                 rel="nofollow noopner"
                 target="_blank"
                 class="text-gray-1 hover:underline"
               >
-                TailGrids
+                
               </a>
             </p>
           </div>
