Your commit message here

--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -13,11 +13,10 @@
               What Drives Us
             </h2>
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-              Across Africa, livestock farmers face enormous challenges — from undetected illnesses to preventable deaths. But most of them don’t have access to vet care or early warning tools.
-We believe tech should change that.
-SmartIView is building intelligent systems that track livestock health in real time — so farmers can act faster, save more animals, and build stronger incomes.
-              <br> <br>
-              This isn’t about flashy tech. It’s about giving farmers the tools they actually need.
+              At SmartIView, we believe that technology should solve real problems - especially in regions left behind. Our drive is rooted in a deep passion to bridge the gap between innovation and the daily realitites of Africans.
+              We are inspired by the resilience of farmers, educators, and small businesses, and we exist to empower them with tools that make life simpler, smarter, and more productive. 
+            <br> <br>
+            Our mission is not just to build tech - but to build trust, enable transformation, and ignite sustainable growth through solutions tailored for our environment.
             </p>
 
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
@@ -41,14 +40,14 @@ SmartIView is building intelligent systems that track livestock health in real t
               </div>
 
               <div
-                class="bg-primary relative z-10 mb-4 flex items-center justify-center overflow-hidden py-12 px-6 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8">
+                class="bg-primary relative z-10 mb-4 flex items-center justify-center overflow-hidden py-12 px-6 sm:mb-8 sm:h-[140px] sm:p-7 lg:mb-6 xl:mb-8">
                 <div>
-                  <span class="block text-5xl font-extrabold text-white">
-                    SmartIView
+                  <span class="block text-3xl font-extrabold text-white">
+                    SMARTiVIEW
                   </span>
                   <br> <br>
                   <span class="block text-base font-semibold text-white">
-                    From insight to invention
+                    From Insight to Invention
                   </span>
                   <span class="block text-base font-medium text-white text-opacity-70">
                    
