--- a/src/components/CTAsection.astro
+++ b/src/components/CTAsection.astro
@@ -7,15 +7,15 @@
         <div class="w-full px-4">
           <div class="mx-auto max-w-[570px] text-center">
             <h2 class="mb-2.5 text-3xl font-bold md:leading-[1.44] text-white md:text-[38px]">
-              <span>Let's build What Matters</span>
+              <span>Partner With Us</span>
               <span class="font-normal text-3xl md:text-[40px]"> </span>
             </h2>
             <p class="mb-6 mx-auto max-w-[515px] text-base leading-[1.5] text-white">
-             SmartIView is just getting started, but the vision is clear. If that sounds like something you want to be part of - whether as a collaborator, supporter, or curious mind - we'd love to hear from you.
+             At SmartIView, we believe innovation thrives through collaboration. Whether you're a government agency, private organisation, NGO, tech expert or investor - your partnership can accelerate the impact of smart solutions in communities across Africa.
             </p>
             <a href="/#contact"
               class="inline-block py-3 text-base font-medium text-white transition border border-transparent rounded-md bg-secondary px-7 hover:bg-[#0BB489]">
-              Reach Out
+              Become a Partner
             </a>
           </div>
         </div>
