--- a/src/components/Visio.astro
+++ b/src/components/Visio.astro
@@ -12,7 +12,7 @@
               Our Vision
             </h2>
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-              To become a leading force in purposeful innovation - creating scalable, smart systems that enhances how people live, learn, and operate, across sectors.
+              To be Africa's leading hub for practical, homegrown technological solutions - improving lives, transforming industries, and empowering communities through smart innovation.
               <br> <br>
              
             </p>
@@ -21,7 +21,7 @@
             Our Mission
           </h2>
             <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-              To design and deploy adaptable IoT solutions that tackle real problems in health, education, agriculture, and beyond - starting right where they're needed most.
+              To develop and deploy intelligent systems that address real challenges in agriculture, education, health, and beyond - making technology accessible. adaptable, and impactful for everyday users across Africa.
           </div>
         </div>
 
