--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -17,9 +17,9 @@ const menuitems = [
   //   path: "/#team",
   // }, // Commented out
   {
-   //  title: "Our Solutions",
-   //  path: "/solutions", 
-     // }, // Commented out
+     title: "Solutions",
+      path: "/solutions", 
+    
   },
   {
     title: "Contact",
