--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,25 +14,25 @@
           <h1
             class="mb-6 text-3xl font-bold leading-snug text-white sm:text-4xl sm:leading-snug lg:text-5xl lg:leading-[1.2]"
           >
-          Saving Africa’s Livestock, One Smart Sensor at a Time.
+          Building Africa's Future
             </h1>
           <p
             class="mx-auto mb-9 max-w-[600px] font-medium text-base text-white sm:text-lg sm:leading-[1.44]"
           >
-          Millions of farmers lose animals every year due to undetected illnesses. At SmartIView, we’re building a smarter way — affordable tools that help farmers monitor livestock health early, act faster, and reduce losses.
+          SmartIView is an African-born innovation hub using smart technology to solve critical problems across agriculture, education, and beyond - starting with intelligent solutions for poultry farming.
           </p>
           <ul class="mb-10 flex gap-5 flex-wrap items-center justify-center">
             <li>
               <a
-                href="/#Visio"
+                href="/solutions", 
                 class="inline-flex items-center justify-center rounded-md bg-white py-[14px] px-7 text-center text-base font-medium text-dark shadow-1 transition duration-300 ease-in-out hover:text-body-color hover:bg-gray-2"
               >
-                Discover Our Vision
+                Explore Our Flagship Solution
               </a>
             </li>
             <li>
               <a
-                href="/#Visio"
+                href="/solutions", 
               
             
               >
