--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -8,11 +8,11 @@ const menuitems = [
     title: "About",
     path: "/#about",
   },
-   // {
+  // {
   //   title: "Pricing",
   //   path: "/#pricing",
   // }, // Commented out
-   // {
+  // {
   //   title: "Team",
   //   path: "/#team",
   // }, // Commented out
@@ -30,11 +30,11 @@ const menuitems = [
     // path: "/blog",
    // }, // Commented out
   },
-   // {
+  // {
   //   title: "Pages",
   //   path: "/#pages",
   // }, // Commented out
-   // ...other menu items
+  // ...other menu items
 ];
 ---
 <header class="ud-header absolute top-0 left-0 z-40 flex w-full items-center bg-transparent">
@@ -44,15 +44,16 @@ const menuitems = [
         <a href="/" class="navbar-logo block w-full py-5">
           {(Astro.url.pathname === '/') ? (
             <img
-              src="/assets/logo/logo-white.png"
+              src={Astro.resolve('/assets/logo/logo-white.png')}
               alt="SmartIView Logo"
               class="header-logo w-full"
             />
           ) : (
-            <img src="/assets/logo/logo-white.png" alt="logo" class="w-full dark:hidden" />
-            <img src="/assets/logo/logo-white.png" alt="logo" class="w-full hidden dark:block" />
+            <>
+              <img src={Astro.resolve('/assets/logo/logo-white.png')} alt="logo" class="w-full dark:hidden" />
+              <img src={Astro.resolve('/assets/logo/logo-white.png')} alt="logo" class="w-full hidden dark:block" />
+            </>
           )}
-          
         </a>
       </div>
       <div class="flex w-full items-center justify-between px-4">
@@ -89,10 +90,8 @@ const menuitems = [
                           {item.title}
                         </a>
                       </li>
-
                     )
                   }
-                
                   if(item.children) {
                     return (
                       <li class="submenu-item group relative">
@@ -102,14 +101,12 @@ const menuitems = [
                           ${Astro.url.pathname === '/' ? 'relative mx-8 flex items-center justify-between py-2 font-medium text-base text-dark dark:text-white group-hover:text-primary lg:mr-0 lg:ml-8 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10' : 'relative mx-8 flex items-center justify-between py-2 font-medium text-base text-primary group-hover:text-primary lg:mr-0 lg:ml-8 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 xl:ml-10'}
                           `}>
                           {item.title}
-
                           <svg class="fill-current ml-2" width="16" height="20" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                               d="M7.99999 14.9C7.84999 14.9 7.72499 14.85 7.59999 14.75L1.84999 9.10005C1.62499 8.87505 1.62499 8.52505 1.84999 8.30005C2.07499 8.07505 2.42499 8.07505 2.64999 8.30005L7.99999 13.525L13.35 8.25005C13.575 8.02505 13.925 8.02505 14.15 8.25005C14.375 8.47505 14.375 8.82505 14.15 9.05005L8.39999 14.7C8.27499 14.825 8.14999 14.9 7.99999 14.9Z" 
                             />
                           </svg>
                         </a>
-
                         <div
                           class="submenu relative top-full left-0 hidden w-[250px] rounded-sm bg-white dark:bg-dark-2 p-4 transition-[top] duration-300 group-hover:opacity-100 lg:invisible lg:absolute lg:top-[110%] lg:block lg:opacity-0 lg:shadow-lg lg:group-hover:visible lg:group-hover:top-full"
                         >
