Fix image paths for GitHub Pages

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -41,20 +41,20 @@ const menuitems = [
   <div class="container">
     <div class="relative -mx-4 flex items-center justify-between">
       <div class="w-60 max-w-full px-4">
-        <a href="/" class="navbar-logo block w-full py-5">
-          {(Astro.url.pathname === '/') ? (
-            <img
-              src={Astro.resolve('/assets/logo/logo-white.png')}
-              alt="SmartIView Logo"
-              class="header-logo w-full"
-            />
-          ) : (
-            <>
-              <img src={Astro.resolve('/assets/logo/logo-white.png')} alt="logo" class="w-full dark:hidden" />
-              <img src={Astro.resolve('/assets/logo/logo-white.png')} alt="logo" class="w-full hidden dark:block" />
-            </>
-          )}
-        </a>
+       <a href="/" class="navbar-logo block w-full py-5">
+  {Astro.url.pathname === '/' ? (
+    <img
+      src="/assets/logo/logo-white.png"
+      alt="SmartIView Logo"
+      class="header-logo w-full"
+    />
+  ) : (
+    <>
+      <img src="/assets/logo/logo-white.png" alt="logo" class="w-full dark:hidden" />
+      <img src="/assets/logo/logo-white.png" alt="logo" class="w-full hidden dark:block" />
+    </>
+  )}
+</a>
       </div>
       <div class="flex w-full items-center justify-between px-4">
         <div>
