--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,8 +1,8 @@
-<!-<!-- ====== Hero Section Start -->
+<!-- ====== Hero Section Start -->
 <section
   id="visio"
   class="relative overflow-hidden pt-[120px] md:pt-[130px] lg:pt-[160px]"
-  style={`background-image: url('${Astro.resolve('/assets/hero/iot22.jpg')}'); background-size: cover; background-position: center;`}
+  style="background-image: url('/assets/hero/iot22.jpg'); background-size: cover; background-position: center;"
 >
   <div class="container">
     <div class="-mx-4 flex flex-wrap items-center">
@@ -47,11 +47,7 @@
       <div class="w-full px-4">
         <div class="wow fadeInUp relative z-10 mx-auto max-w-[845px]" data-wow-delay=".25s">
           <div class="mt-16">
-            <img
-              src={Astro.resolve('/assets/hero/your-image.png')}
-              alt="Hero Graphic"
-              class="mx-auto"
-            />
+            
             <div class="absolute -left-9 bottom-0 z-[-1]">
               <svg
                 width="134"
